changed swagger yaml
