# src/services/models/user-auth.ts
@@ -5,28 +5,28 @@
  * A simple calculator API.
  *
  * OpenAPI spec version: 1.0.0
- *
+ * 
  *
  * NOTE: This class is auto generated by the swagger code generator program.
  * https://github.com/swagger-api/swagger-codegen.git
  * Do not edit the class manually.
  */
 /**
- *
+ * 
  * @export
- * @interface User
+ * @interface UserAuth
  */
-export interface User {
-  /**
-   *
-   * @type {any}
-   * @memberof User
-   */
-  username?: any;
-  /**
-   *
-   * @type {any}
-   * @memberof User
-   */
-  password?: any;
+export interface UserAuth {
+    /**
+     * 
+     * @type {any}
+     * @memberof UserAuth
+     */
+    userid?: any;
+    /**
+     * 
+     * @type {any}
+     * @memberof UserAuth
+     */
+    jwt?: any;
 }
